# tgp

./: LICENSE  pyproject.toml
tests/: test_tgp.py
tgp/: __init__.py
